project/tests/in_progress/for_main/good/test_suit_good/00198/00198b.c
#include <stdio.h>

int main()
{
   enum { e, f, g } h;

   printf("e=%d\n", e);
   printf("f=%d\n", f);
   printf("g=%d\n", g);

   return 0;
}

/* vim: set expandtab ts=4 sw=3 sts=3 tw=80 :*/
