project/tests/in_progress/for_main/bad/complex_types/pointers/simple_types_ptr/double/double_ptr02/double_ptr02.c
#include <stdio.h>

double a = 5.55;
double *b = &a;

int main() {
    printf("%f\n", *b);
    return 0;
}
